objects/Customer_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that the CI is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Inquiries</relationshipLabel>
        <relationshipName>Customer_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user assigned to this inquiry</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Inquiries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Profile__c</fullName>
        <description>The profile name of the assigned to user</description>
        <formula>Assigned_To__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Ops_Case__r.Auction_Number__c,  Ops_Case__r.Auction_Number__r.Name, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Related Customer Inquiries</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Bucket__c</fullName>
        <description>The bucket that the call falls into.</description>
        <label>Call Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Buyer Shipment</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>ACV Transport</fullName>
                </value>
                <value>
                    <fullName>Resolutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Count__c</fullName>
        <description>The number of times that the customers have called about a specific inquiry.</description>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <description>The notes from the call.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>The subset of Call Bucket, further defines what the dealer is calling about.</description>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Bucket__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Release Slip</fullName>
                </value>
                <value>
                    <fullName>Payment Not Selected</fullName>
                </value>
                <value>
                    <fullName>NSF</fullName>
                </value>
                <value>
                    <fullName>Buyer Payment Status</fullName>
                </value>
                <value>
                    <fullName>Seller Payment Status</fullName>
                </value>
                <value>
                    <fullName>Default Payment Update</fullName>
                </value>
                <value>
                    <fullName>ACV Capital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Pickup Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel Transport</fullName>
                </value>
                <value>
                    <fullName>Dealmaker</fullName>
                </value>
                <value>
                    <fullName>Make an Offer</fullName>
                </value>
                <value>
                    <fullName>False Proxy</fullName>
                </value>
                <value>
                    <fullName>Goodwill Request</fullName>
                </value>
                <value>
                    <fullName>Multi-Store Buyer</fullName>
                </value>
                <value>
                    <fullName>Ghost Bid</fullName>
                </value>
                <value>
                    <fullName>Account/Contact Update</fullName>
                </value>
                <value>
                    <fullName>User Login Support</fullName>
                </value>
                <value>
                    <fullName>Deactivation</fullName>
                </value>
                <value>
                    <fullName>Good Experience</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unwind</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Valid Business Reason</fullName>
                </value>
                <value>
                    <fullName>Called No Answer, Try Again</fullName>
                </value>
                <value>
                    <fullName>App Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>Ops_Case__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact related to the CI</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Inquiries</relationshipLabel>
        <relationshipName>Customer_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry__c</fullName>
        <formula>IF( ISBLANK(TEXT(Call_Type__c)) , HYPERLINK( &quot;/&quot; + Id,  &quot;Historic Record&quot;, &quot;_self&quot;), HYPERLINK( &quot;/&quot; + Id,  TEXT(Call_Type__c), &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Inquiry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This is the external id for CI records coming from the Report a Problem process in tools. It is a concatenated id made up of the auction_issues table id and the auction_issues_note table id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be true when a customer inquiry is resolved upon creation</description>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Inquiry_Comment__c</fullName>
        <description>The first inquiry comment logged on this customer inquiry</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Inquiry Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Ops_Call_Comments__c</fullName>
        <description>Comments from the last call logged on the related Ops Case</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Ops Call Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Ops_Call_Date__c</fullName>
        <description>The date the last call was logged on the related Ops Case.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the last call was logged on the related Ops Case.</inlineHelpText>
        <label>Last Ops Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Ops_Call_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who logged the last call on the related Ops Case</description>
        <inlineHelpText>The user who logged the last call on the related Ops Case</inlineHelpText>
        <label>Last Ops Call User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Inquiry_Comment__c</fullName>
        <description>The last comment logged on this customer inquiry.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Most Recent Inquiry Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ops_Case_Seller_Account__c</fullName>
        <formula>Ops_Case__r.Seller_Dealership__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Case Seller Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Case_Status__c</fullName>
        <formula>TEXT(Ops_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ops Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Support Cases</relationshipLabel>
        <relationshipName>Related_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Follow_Up_Date__c</fullName>
        <description>The follow up date selected on the last logged call on the related Ops Case</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The follow up date selected on the last logged call on the related Ops Case</inlineHelpText>
        <label>Ops Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Displays which process a CI record was created by.</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>48 Hr Notice Tab</fullName>
                </value>
                <value>
                    <fullName>Log an Interaction</fullName>
                </value>
                <value>
                    <fullName>Report a Problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of the inquiry.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_Link__c</fullName>
        <description>Link to the Seller Account on the related ops case.  Within Salesforce this will work in all environments.  Will only work properly from an email template when used in production.</description>
        <formula>IF( $Organization.Id = &apos;00D8G0000004f3E&apos;, 
HYPERLINK( &quot;https://acvauctions.lightning.force.com/&quot; +  Ops_Case__r.Seller_Dealership__c ,  Ops_Case__r.Seller_Dealership__r.Name , &quot;_self&quot;),
HYPERLINK( &quot;/&quot; +  Ops_Case__r.Seller_Dealership__c ,  Ops_Case__r.Seller_Dealership__r.Name , &quot;_self&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Should_Assign_To__c</fullName>
        <label>Should Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the inquiry.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>AM Follow Up</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Inquiry Resolved</fullName>
                    <isActive>false</isActive>
                    <label>Inquiry Resolved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Case_Status__c</fullName>
        <formula>TEXT(Support_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases &amp; Auctions</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Titles_Reason_for_Delay__c</fullName>
        <description>The Reason For Title Delay on the last logged call on the related Ops Case.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Reason For Title Delay on the last logged call on the related Ops Case.</inlineHelpText>
        <label>Titles Reason for Delay</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Last_6__c</fullName>
        <description>Returns the Last 6 characters of VIN.  First checking related auction and then related ops case.</description>
        <formula>IF( 
 !ISBLANK(Auction__r.VIN__c), 
  RIGHT(Auction__r.VIN__c, 6) , 
  Ops_Case__r.Vehicle_VIN_Last_6__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN Last 6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Ops_Case__r.Vehicle__c, Ops_Case__r.Vehicle__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekdays_Open__c</fullName>
        <description>Returns the total weekdays the Customer Inquiry has been opened. Starts at 0 on creation and goes to 1 the next business day.</description>
        <formula>CASE(
 MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
 0 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 1 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 2 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 3 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 4 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 5 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 6 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 999
) 
+(FLOOR(( TODAY() - DATEVALUE(CreatedDate) )/7)*5)
-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekdays Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model__c</fullName>
        <description>The year make and model of related vehicle.  First looks for vehicle on ops case.  If no ops case gets vehicle from auction</description>
        <formula>IF(
 !ISBLANK(Ops_Case__c),
 Ops_Case__r.Vehicle_Year_Make_Model__c, 
 Auction__r.Vehicle_Year__c + &apos; &apos; +  Auction__r.Vehicle_Make__c  + &apos; &apos; + Auction__r.Vehicle_Model__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year/Make/Model</label>
        <type>Text</type>
    </fields>
    <label>Customer Inquiry</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Customer Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Reopen_Non_Titles</fullName>
        <active>false</active>
        <description>Inquiries that have a non Titles call bucket cannot be reopened</description>
        <errorConditionFormula>AND(
 !ISPICKVAL( Call_Bucket__c , &apos;Titles&apos;),
 First_Call_Resolution__c = true,
 TEXT(PRIORVALUE(Status__c)) = &apos;Closed&apos;,
 ISCHANGED(Status__c) 
)</errorConditionFormula>
        <errorMessage>Closed Inquiries that do not have a Titles call bucket cannot be reopened.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Set_CI_Back_to_New</fullName>
        <active>false</active>
        <description>Once a CI has been moved out of New, it cannot be set back.
Created By</description>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
TEXT(Status__c) = &apos;New&apos;,
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>CI cannot be set back to &apos;New&apos; status once it has been worked on.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_User_Cannot_Close</fullName>
        <active>false</active>
        <description>Users with a title profile should not be allowed to change Customer inquiry status to closed.</description>
        <errorConditionFormula>AND(
 ISCHANGED( Status__c ),
 ISPICKVAL(Status__c, &quot;Closed&quot;),
 !ISPICKVAL(Call_Type__c, &quot;Seller Title Status&quot;),
 $Profile.Name != &quot;Inside Sales - Account Managers&quot;,
 $Profile.Name != &quot;Inside Sales - Account Managers Unwind&quot;,
 $Profile.Name != &quot;Inside Sales - Activation&quot;,
 $Profile.Name != &quot;Inside Sales - Managers&quot;,
 $Profile.Name != &quot;Inside Sales Acct. Managers Legal Review&quot;,
 $Profile.Name != &quot;Customer Success Team&quot;,
 $Profile.Name != &quot;Business Development Rep&quot;,
 $Profile.Name != &quot;Major Accounts CSM&quot;,
 $Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only Account Management can mark a ticket as Closed. If you feel you have resolved the issue, please update status to AM Follow Up.</errorMessage>
    </validationRules>
</CustomObject>